testcases/compiler2015/Phase2/CompileError/struct-5100379071-puyouer.c
/*
 * rename member in struct
 */
struct A {
    int f;
    char a, b, c, d, e, f, g;
};

int main() {
    return 0;
}
